src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__overlay_reference_unit_mismatch.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"reference_units/mismatch.one\")"
---
error: unit mismatch: parameter `L_r` has unit `km` but design applies value with unit `dBW`
  at fixtures/reference_units/mismatch.one:6:1
