src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__overlay_unit_mismatch.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_fixture_with_design(\"unit_mismatch_overlay/parent.on\",\n\"unit_mismatch_overlay/mismatch.one\",)"
---
error: unit mismatch: parameter `L` has unit `m` but design applies value with unit `s`
  at fixtures/unit_mismatch_overlay/mismatch.one:8:1
