src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__python_sibling_modules.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"python/python_sibling_modules.on\")"
---
Model: fixtures/python/python_sibling_modules.on
Tests: 1/1
  test 1: PASS
Parameters:
  s = 3 :m
  A = 9 :m^2
  min_area = 8 :m^2
