src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__reference_follows_design_display_unit.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"reference_units/display_unit.one\")"
---
Model: fixtures/reference_units/parent.on
Tests: 1/1
  test 1: PASS
Parameters:
  L = 2e3 :m
  P_c = 16 :dBW
  R_c = 3 | 4 :km
  G_c = 63.1
  eta_c = 0.9
  L_r = 2e3 :m
