src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__reference_to_shadowed_builtin_inherits_unit.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"reference_units/shadow.one\")"
---
Model: fixtures/reference_units/builtin.on
Tests: 0/0
Parameters:
  t = 3 :m
  pi = 3 :m
